<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/some_id"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="658dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Main"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btn_MainSend"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="210dp"
        android:background="#5498ff"
        android:text="@string/Send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id" />

    <Button
        android:id="@+id/btn_AddAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="57dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id" />

    <Button
        android:id="@+id/btn_Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="56dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_History"
        app:layout_constraintStart_toEndOf="@+id/btn_AddAccount"
        app:layout_constraintTop_toBottomOf="@+id/btn_MainSend" />

    <Button
        android:id="@+id/btn_History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="57dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Main"
        app:layout_constraintTop_toBottomOf="@+id/some_id"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>